candle-einops-macros/tests/ui/fail/unmatched-ellipsis.stderr
error: Ellipsis `..` must appear on both sides of the expression
 --> tests/ui/fail/unmatched-ellipsis.rs:4:21
  |
4 |     let _ = einops!("a -> a ..", ());
  |                     ^^^^^^^^^^^
